# smally

./: .flake8  LICENSE  README.md  _install_tools.sh  classes.py  install_tools.sh  pyproject.toml  smally.py  smally.sh  test.sh  tox.ini
